core/rskit-media/tests/snapshots/golden__formats_for_codec_aac.snap
---
source: crates/rskit-media/tests/golden.rs
expression: ids
---
[
    "mkv",
    "mov",
    "mp4",
    "ts",
]
