core/rskit-media/tests/snapshots/golden__formats_for_codec_opus.snap
---
source: crates/rskit-media/tests/golden.rs
expression: ids
---
[
    "mkv",
    "mp4",
    "ogg",
    "webm",
]
